--- a/Task_0/package.json
+++ b/Task_0/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task_1",
+  "name": "task_0",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.1",
+    "@expo-google-fonts/lobster": "^0.4.0",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
-    "expo": "~53.0.20",
+    "expo": "~53.0.22",
     "expo-font": "~13.3.2",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.5",
+    "react-native": "^0.79.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1"
   },
