--- a/Task_2/package.json
+++ b/Task_2/package.json
@@ -9,9 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.2",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
+    "axios": "^1.12.2",
     "expo": "~54.0.10",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
@@ -21,8 +23,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "@expo/vector-icons": "^15.0.2"
+    "react-native-screens": "~4.16.0"
   },
   "private": true
 }
